fixed cropped product thumbnails

--- a/src/components/ShopProduct/shop-product.module.scss
+++ b/src/components/ShopProduct/shop-product.module.scss
@@ -28,7 +28,7 @@
 .thumbnails-container{
     width:100%;
     display:flex;
-    height:30px;
+    height:70px;
     overflow: hidden;
     justify-content: center;
 }
