--- a/src/templates/shop-product/shop-product-page.module.scss
+++ b/src/templates/shop-product/shop-product-page.module.scss
@@ -61,7 +61,7 @@
     height:100%;
     padding:0 35px 0;
     @include breakpoint(lg){
-        padding:35px 40px 35px;
+        padding:35px 0vw;
     }
 }
 
